commit for index

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,12 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = update
 
+#oracle dabase
+spring.datasource.datasource-oracle.url=jdbc:oracle:thin:@10.10.100.132:1575/shfltest
+spring.datasource.datasource-oracle.username=shfltest
+spring.datasource.datasource-oracle.password=shfltest
+spring.datasource.datasource-oracle.driver-class-name=oracle.jdbc.OracleDriver
+
 #stmp mail configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
