--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<!--<dependency>
 			<groupId>com.ironsoftware</groupId>
 			<artifactId>ironpdf</artifactId>
