commit for update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,22 +4,24 @@ server.port=8060
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 #ms sql configuration
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=stlap1;encrypt=true;trustServerCertificate=true;
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.url=jdbc:sqlserver://10.133.0.19\\sqlexpress;databaseName=STLAPDEV;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=stlapusr
+spring.datasource.password=stlapusr@2023
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
 
 #oracle dabase
-spring.datasource.datasource-oracle.url=jdbc:oracle:thin:@172.26.26.251:1521/shfltest
+spring.datasource.datasource-oracle.url=jdbc:oracle:thin:@10.10.100.132:1575/shfltest
 spring.datasource.datasource-oracle.username=shfltest
 spring.datasource.datasource-oracle.password=shfltest
 spring.datasource.datasource-oracle.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.datasource-oracle.hikari.connection-timeout = 300000
 
+logging.level.org.springframework=DEBUG
 #stmp mail configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
