--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,14 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 
 #ms sql configuration
-spring.datasource.url=jdbc:sqlserver://10.133.0.19\\sqlexpress;databaseName=STLAPDEV;encrypt=true;trustServerCertificate=true;
-spring.datasource.username=stlapusr
-spring.datasource.password=stlapusr@2023
+#spring.datasource.url=jdbc:sqlserver://10.133.0.19\\sqlexpress;databaseName=STLAPDEV;encrypt=true;trustServerCertificate=true;
+#spring.datasource.username=stlapusr
+#spring.datasource.password=stlapusr@2023
 
 #spring.datasource.url=jdbc:sqlserver://localhost;databaseName=stlap1;encrypt=true;trustServerCertificate=true;
 #spring.datasource.username=test
 #spring.datasource.password=test
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 
 spring.jpa.show-sql=true
@@ -23,11 +23,11 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = none
 
 #oracle dabase
-spring.datasource.datasource-oracle.url=jdbc:oracle:thin:@10.10.100.132:1575/shfltest
-spring.datasource.datasource-oracle.username=shfltest
-spring.datasource.datasource-oracle.password=shfltest
-spring.datasource.datasource-oracle.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.datasource-oracle.hikari.connection-timeout = 300000
+#spring.datasource.datasource-oracle.url=jdbc:oracle:thin:@10.10.100.132:1575/shfltest
+#spring.datasource.datasource-oracle.username=shfltest
+#spring.datasource.datasource-oracle.password=shfltest
+#spring.datasource.datasource-oracle.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.datasource-oracle.hikari.connection-timeout = 300000
 
 logging.level.org.springframework=DEBUG
 #stmp mail configuration
@@ -46,11 +46,11 @@ logging.logback.rollingpolicy.max-file-size=5MB
 logging.logback.rollingpolicy.max-history=30
 
 #server Url
-#stlap.server.url=http://localhost:8080
-#mail.server.url=http://localhost:8083
-
-stlap.server.url=http://192.168.17.113:9090/shflstlap
+stlap.server.url=http://localhost:8080
 mail.server.url=http://localhost:8083
+
+#stlap.server.url=http://192.168.17.113:9090/shflstlap
+#mail.server.url=http://localhost:8083
 
 
 #envirornment  DEV,TESTING
