commit for artiface change

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,7 +49,8 @@ logging.logback.rollingpolicy.max-history=30
 #stlap.server.url=http://localhost:8080
 mail.server.url=http://localhost:8083
 
-stlap.server.url=http://192.168.17.113:9090/shflstlap
+stlap.server.url=https://blmsstlap.sundaramhome.in/shflstlap
+
 #mail.server.url=http://localhost:8083
 
 
