--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.st.lap</groupId>
-	<artifactId>stlap-letter-generation</artifactId>
+	<artifactId>letter-generation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>letter-generation</name>
