commit for output

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,8 +40,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #logging config
 management.endpoints.web.exposure.include = *
-logging.file.name=./logs/stlap.log
-logging.logback.rollingpolicy.file-name-pattern=./logs/stlap-%d{yyyy-MM-dd}.%i.log
+logging.file.name=./logs/lettergeneration.log
+logging.logback.rollingpolicy.file-name-pattern=./logs/lettergeneration-%d{yyyy-MM-dd}.%i.log
 logging.logback.rollingpolicy.max-file-size=5MB
 logging.logback.rollingpolicy.max-history=30
 
